syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

message Update {
    enum Action {
        Added = 0;
        Updated = 1;
        Removed = 2;
    }
}

message Feed {
    enum MarketSide {
        BID = 0;
        ASK = 1;
    }

    enum Timeframe {
        S1 = 0;
        S10 = 1;
        M1 = 2;
        M5 = 3;
        M15 = 4;
        M30 = 5;
        H1 = 6;
        H4 = 7;
        D = 8;
        W = 9;
        M_N = 10;
        TICKS = 11;
        TICKS_LEVEL2 = 12;
        TICKS_VWAP = 13;
    }
}